--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,3 +1,9 @@
-"<div style='border: 3px dashed red'>
+<% if @name %>
+<h1> 
+  My name is <%= @name %>
+</h1>
+<% end %>
+
+<div style='border: 3px dashed red'>
   <img src='https://i.imgur.com/jFaSxym.png'>
-</div>"
+</div>
