--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -4,6 +4,12 @@
 </h1>
 <% end %>
 
+<form action="/named-cat">
+  <input type="text" name="name">
+  <input type="submit" value="Submit">
+</form>
+
 <div style='border: 3px dashed red'>
   <img src='https://i.imgur.com/jFaSxym.png'>
 </div>
+
